# DragonBall_GokuVsPiccolo

./: README.md
MomentoI/: Momento_I_Contextualizacion.docx
MomentoII/: Momento_II_Diseno_Analisis.docx
MomentoIII/: Informe de responsabilidades Final.docx
MomentoIII/Final_Info_II/: CMakeLists.txt  Sprites.qrc  blastb.cpp  blastb.h  bolaenergia.cpp  bolaenergia.h  game.cpp  game.h  game.ui  goku.cpp  goku.h  gravityblast.cpp  gravityblast.h  ground.cpp  ground.h  habilidad.cpp  habilidad.h  hitboxataque.cpp  hitboxataque.h  kamehameha.cpp  kamehameha.h  kamehameha_new.cpp  kick.cpp  kick.h  main.cpp  mainmenu.cpp  mainmenu.h  personaje.cpp  personaje.h  piccolo.cpp  piccolo.h  player.cpp  player.h  rayo.cpp  rayo.h
MomentoIII/Final_Info_II/Sprites/: prueba1.xcf
